lab1/Test/L1-A-13-92.output
Error Type A at Line 1
Error Type A at Line 6
Error Type A at Line 11
Error Type B at Line 13
Error Type A at Line 14
Error Type B at Line 17
Error Type A at Line 22
Error Type B at Line 23
Error Type B at Line 29
Error Type B at Line 32
