lab1/Test/L1-A-13-92.cmm
float :;
struct Moz5oEu_qar {
  int MD3RsUBz7raKcgjicZ [ 1868301862 ] = Efvuafhp 
    = I_rtM9EG && rHOU7ikcWE != GMS5GQP4PuzmM_Fxvf - lZhnXvWSGCMBCSb45 
    / vakf2 ( ekK , j_Iq2KGczw7ilniMy || IY * ! v1RkeC 
    [ YTOe7o1I8 = jmvv0yT = Nc9pwk < xIxeDSxlmnrW7 @+ 
    ! ( HOYAyKh7j && RBsYiAxaY <= ! ( C39P8j || RltVefllsUn 
    > vNtORmRJQ8 ) >= 819828330 ) == z * - 549053928.681308904 
    ] ) + ! - UwBeJwcg ( ) . p6r3NTDV2bq , mEJHuhMdxqK5T 
    ;
}y3QBX8Br ( ) ${
}
int ZolfL0hv07GdsuF41J ( int ) {
  if ( wM7_ )   if ( eCW9137k ) :  J0ZI7P ;
else   BeG9 ;

else   while ( v_8NhP float ) {
  }

  while ( KOeok6c1Vh )   if ( eCmj6vZzZ2suJm )   HCr_y_I3LEjfUn2 
    ;
else :{
    if ( rwb8dqbYma     return Z6RfIj_Blszq ;

  }

}
struct {
;
int ;
struct mteob 
int ;
int iOEbrNzESNS 
;
int dF5 , p9 

;
int ;
int ;
int ;
int ;
int cBgtt95L_JnDlN0JBAjT ( int x , int qHccTA ) {
    ihq2IH6OFWEB ;
    pRBnlitWxdre00Da ;
    eQ ;
    kRIHZqGLs6OsDanKn ;
    while ( UuKLYT7HaHnuS ) {
      while ( FkYDrdiJI ) {
        lf0j ;
        Ml ;
        EDjABnhFK ;
{
          if ( CdQTT )           if ( N_TP7XCwF ) 
                      while ( CxkHrhttzI54VoenHk )           if 
            ( aYSEMm )           g8dIxkxkNzDi ;
else {
            if ( Fkft8rjgiaDlIaMHRk )             jTjG71Rwli6MuN 
              ;
else             if ( DTzrhadkFlILe2c )             l7ytOIB0UvARufO 
              ;


          }

else           NLKn5gN ;

else           fES7STf7mKM ;

          while ( T1yt19f6Zr )           while ( NrvkBsYcgnLKc 
            )           jV1lSnDC6Yv29mhhTkTM ;


        }      }
      if ( COQc1WRml ) {
        CUaXlVinXsXOsWJ ;
      }else {
      }
    }
    UWFrRzp2jw7NxbTb ;
  }
